# Infograph2Data

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: frontend-tests.yml
backend/app/: config.py  main.py
backend/app/routers/: export.py  extraction.py  health.py  identify.py  review.py  upload.py
backend/app/schemas/: dataset.py  export.py  extraction.py  identification.py  upload.py
backend/app/services/: extractor.py  pdf.py  storage.py  vision.py
docs/: architecture.md  copilot_cli_log.md  deployment.md  deployment_docker.md  devlog.md  phase_2_plan.md  phase_3_plan.md  phase_4_plan.md  phase_5_plan.md  phase_6_plan.md  phase_7_plan.md  prompts_history.md  test_plan.md  test_plan_frontend.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: EditableCell.tsx  EmptyState.tsx  Header.tsx  LoadingOverlay.tsx  MainLayout.tsx  StepIndicator.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/pages/: ExportPage.tsx  IdentifyPage.tsx  ReviewPage.tsx  UploadPage.tsx
frontend/src/store/: useAppStore.ts
frontend/src/test/: EditableCell.test.tsx  api.test.ts  components.test.tsx  (+6 more)
issues/: 001_datetime_timezone_mismatch.md  002_vision_llm_json_parsing.md  003_network_error_extraction.md  004_incomplete_data_extraction.md  005_export_ignores_source_filter.md  006_health_response_type_mismatch.md  007_review_edits_not_persisted.md  008_export_ignores_frontend_edits.md  009_no_confirmation_before_reset.md  010_identification_expiry_not_handled.md  README.md
tests/: conftest.py
tests/e2e/: test_happy_path.py
tests/integration/: test_export.py  test_extraction.py  test_health.py  test_identify.py  test_review.py  test_upload.py
tests/unit/: test_extractor.py  test_pdf.py  test_storage.py  test_vision.py
(+2 files in other folders)
